calamares-settings-ubuntu (1:24.04.8) UNRELEASED; urgency=medium

  * Use lxqt-sudo instead of sudo, to pick up theming.
  * Even if modules fail, try to perform the unmount.
  * Explicitly depend on lubuntu-installer-prompt, which provides a default
    workflow on the live system. Remove this package at the end of the install
    as well.
  * Go back to fullscreen.

 -- Simon Quigley <tsimonq2@ubuntu.com>  Wed, 22 Nov 2023 15:22:22 -0600

calamares-settings-ubuntu (1:24.04.7) noble; urgency=medium

  * Copy the Calamares installation log file from $HOME rather than /root.
    (LP: #2044006)
  * Update a Lintian override now that we're using sudo rather than pkexec to
    launch Calamares in Lubuntu.

 -- Aaron Rainbolt <arraybolt3@ubuntu.com>  Mon, 20 Nov 2023 12:21:41 -0600

calamares-settings-ubuntu (1:24.04.6) noble; urgency=medium

  * Use sudo -E to launch Calamares so that Lubuntu theming is preserved.

 -- Aaron Rainbolt <arraybolt3@gmail.com>  Sun, 19 Nov 2023 16:26:18 -0600

calamares-settings-ubuntu (1:24.04.5) noble; urgency=medium

  * Fixed an FTBFS on !(amd64).

 -- Aaron Rainbolt <arraybolt3@gmail.com>  Wed, 15 Nov 2023 21:12:05 -0600

calamares-settings-ubuntu (1:24.04.4) noble; urgency=medium

  * Fixed the pkgselect module's CMakeLists.txt file.
  * Removed some unnecessary path segments from debian/rules.
  * Unset the executable bit on files that shouldn't be executable.
  * Exported the LC_ALL=C.UTF-8 and DEB_BUILD_MAINT_OPTIONS = hardening =+all
    environment variables in debian/rules since we're building a shared
    library in here now.
  * Removed trailing whitespace from changelog.
  * Added some lintian-overrides for the lack of a manual page and an
    executable Python script in /usr/lib

 -- Aaron Rainbolt <arraybolt3@gmail.com>  Wed, 15 Nov 2023 18:33:39 -0600

calamares-settings-ubuntu (1:24.04.3) noble; urgency=medium

  * Revert a failed FTBFS fix.

 -- Aaron Rainbolt <arraybolt3@gmail.com>  Wed, 15 Nov 2023 17:01:22 -0600
