@@ -6,6 +6,8 @@ calamares-settings-ubuntu (1:24.04.8) UNRELEASED; urgency=medium
     workflow on the live system. Remove this package at the end of the install
     as well.
   * Go back to fullscreen.
+  * Add a full installation radio button, and disable the bottom checkboxes if
+    minimal install is selected.
 
  -- Simon Quigley <tsimonq2@ubuntu.com>  Wed, 22 Nov 2023 15:22:22 -0600
 
